--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         
                         <!-- Z-INDEX 20: CAPA PROTECTORA (Transparent Overlay) -->
                         <!-- Esta capa captura los clicks y evita que lleguen al video -->
-                        <div class="absolute inset-0 z-20 bg-transparent w-full h-full" oncontextmenu="return false;"></div>
+                        <div class="absolute inset-0 z-20 bg-transparent w-full h-full pointer-events-auto" oncontextmenu="return false;"></div>
 
                         <!-- Z-INDEX 20: GRADIENTE VISUAL -->
                         <div class="absolute inset-0 z-20 bg-gradient-to-t from-black/90 via-transparent to-transparent opacity-90 pointer-events-none"></div>
