--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         </div>
     </div>
 
+    <!-- VISTA 3: VISION PROMPT DINÁMICO -->
     <div id="view-vision" class="hidden pt-20 px-4 min-h-screen bg-gray-50 dark:bg-[#0a0a0a]">
         <div class="max-w-6xl mx-auto">
             <header class="mb-10 text-center">
