--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galaxy AI Experience</title>
+    <title>Vision AI Experience</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -139,13 +139,13 @@
                 <i class="ph-bold ph-list text-2xl group-hover:scale-110 transition-transform"></i>
             </button>
             <div class="flex flex-col">
-                <h1 id="nav-title" class="text-lg font-bold tracking-tight text-gray-900 dark:text-white leading-none">Galaxy <span class="text-teal-400">S25</span> Ultra</h1>
+                <h1 id="nav-title" class="text-lg font-bold tracking-tight text-gray-900 dark:text-white leading-none">Vision <span class="text-teal-400">v0.9</span> Pro</h1>
                 <span class="text-[10px] uppercase tracking-widest text-gray-500 dark:text-gray-400 font-medium">AI Experience</span>
             </div>
         </div>
         <div class="flex items-center gap-3">
             <button class="bg-gradient-to-r from-blue-600 to-teal-500 hover:from-blue-500 hover:to-teal-400 text-white text-[11px] font-bold px-6 py-2 rounded-full uppercase tracking-wide transition-all shadow-lg shadow-blue-900/20 hover:shadow-blue-900/40 transform hover:-translate-y-0.5 hidden sm:block">
-                Pre-ordenar
+                Activo
             </button>
             <button onclick="toggleTheme()" class="w-10 h-10 flex items-center justify-center rounded-full bg-gray-200 dark:bg-white/5 text-gray-600 dark:text-yellow-400 hover:bg-gray-300 dark:hover:bg-white/10 transition-all">
                 <i id="icon-sun" class="ph-fill ph-sun text-xl hidden dark:block"></i>
@@ -188,7 +188,7 @@
             </button>
             <button onclick="switchView('json')" class="w-full text-left p-3 rounded-xl flex items-center gap-3 hover:bg-gray-100 dark:hover:bg-white/5 text-gray-600 dark:text-gray-300 transition-all group border border-transparent hover:border-gray-200 dark:hover:border-white/5">
                 <div class="w-8 h-8 rounded-lg bg-amber-100 dark:bg-amber-500/20 flex items-center justify-center text-amber-600 dark:text-amber-400 group-hover:scale-110 transition-transform"><i class="ph-fill ph-code text-lg"></i></div>
-                <span class="font-medium group-hover:translate-x-1 transition-transform">Json Script</span>
+                <span class="font-medium group-hover:translate-x-1 transition-transform">Json Prompt</span>
             </button>
         </div>
         <div class="p-4 border-t border-gray-200 dark:border-white/5">
@@ -212,18 +212,18 @@
                     <span class="w-2 h-2 rounded-full bg-teal-400 animate-pulse"></span> Nueva Generación
                 </div>
                 <h2 class="text-5xl md:text-7xl font-extrabold mb-4 tracking-tighter text-white leading-tight">
-                    El futuro es <br/>
-                    <span class="text-gradient">Galaxy AI</span>
+                    El inicio es <br/>
+                    <span class="text-gradient">Vision v0.9/v0.9Pro AI</span>
                 </h2>
                 <p class="text-gray-400 text-lg md:text-xl max-w-xl mb-10 leading-relaxed">
-                    Experimenta la potencia de la inteligencia artificial integrada en tu dispositivo. Crea, edita y visualiza como nunca antes.
+                    Experimenta la potencia de Vision v0.9/v0.9Pro Crea, edita y visualiza.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 w-full sm:w-auto">
                     <button class="bg-white text-black font-bold py-3 px-8 rounded-full hover:bg-gray-200 transition-colors shadow-[0_0_20px_rgba(255,255,255,0.3)]">
                         Ver Video
                     </button>
                     <button class="glass-panel text-white font-bold py-3 px-8 rounded-full hover:bg-white/10 transition-colors border border-white/20">
-                        Especificaciones
+                        Guía
                     </button>
                 </div>
             </div>
@@ -236,8 +236,8 @@
             <div class="max-w-7xl mx-auto">
                 <div class="flex justify-between items-end mb-8 px-2">
                     <div>
-                        <h2 class="text-3xl font-bold text-white mb-2">Explora con Galaxy</h2>
-                        <p class="text-gray-500 text-sm">Contenido destacado de la comunidad</p>
+                        <h2 class="text-3xl font-bold text-white mb-2">Explora con Vision v0.9/v0.9Pro</h2>
+                        <p class="text-gray-500 text-sm">Contenido destacado de Vision</p>
                     </div>
                     <div class="flex gap-2">
                         <button onclick="document.getElementById('video-scroll-container').scrollBy({left:-300, behavior:'smooth'})" class="p-2 rounded-full border border-white/10 hover:bg-white/10 text-white"><i class="ph-bold ph-caret-left"></i></button>
