--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
             <div class="absolute inset-0 bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-blue-900/40 via-black to-black opacity-60 z-0"></div>
             <div class="relative z-10 px-6 mt-10 md:mt-0 flex flex-col items-center max-w-4xl mx-auto">
                 <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full border border-teal-500/30 bg-teal-500/10 text-teal-300 text-xs font-medium uppercase tracking-wider mb-6 animate-fade-in">
-                    <span class="w-2 h-2 rounded-full bg-teal-400 animate-pulse"></span> Nueva Generación
+                    <span class="w-2 h-2 rounded-full bg-teal-400 animate-pulse"></span> Activo
                 </div>
                 <h2 class="text-5xl md:text-7xl font-extrabold mb-4 tracking-tighter text-white leading-tight">
                     El inicio es <br/>
-                    <span class="text-gradient">Vision v0.9/v0.9Pro AI</span>
+                    <span class="text-gradient">Vision v0.9Pro </span>
                 </h2>
                 <p class="text-gray-400 text-lg md:text-xl max-w-xl mb-10 leading-relaxed">
-                    Experimenta la potencia de Vision v0.9/v0.9Pro Crea, edita y visualiza.
+                    Experimenta Vision v0.9Pro Crea, edita y visualiza.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 w-full sm:w-auto">
                     <button class="bg-white text-black font-bold py-3 px-8 rounded-full hover:bg-gray-200 transition-colors shadow-[0_0_20px_rgba(255,255,255,0.3)]">
@@ -236,7 +236,7 @@
             <div class="max-w-7xl mx-auto">
                 <div class="flex justify-between items-end mb-8 px-2">
                     <div>
-                        <h2 class="text-3xl font-bold text-white mb-2">Explora con Vision v0.9/v0.9Pro</h2>
+                        <h2 class="text-3xl font-bold text-white mb-2">Explora con Vision v0.9Pro</h2>
                         <p class="text-gray-500 text-sm">Contenido destacado de Vision</p>
                     </div>
                     <div class="flex gap-2">
