--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
             <div class="max-w-7xl mx-auto">
                 <div class="flex justify-between items-end mb-8 px-2">
                     <div>
-                        <h2 class="text-3xl font-bold text-white mb-2">Explora con Vision v0.9Pro</h2>
-                        <p class="text-gray-500 text-sm">Contenido destacado de Vision</p>
+                        <h2 class="text-3xl font-bold text-white mb-2">Explora con Vision</h2>
+                        <p class="text-gray-500 text-sm">Contenido destacado de Vision v0.9 Pro</p>
                     </div>
                     <div class="flex gap-2">
                         <button onclick="document.getElementById('video-scroll-container').scrollBy({left:-300, behavior:'smooth'})" class="p-2 rounded-full border border-white/10 hover:bg-white/10 text-white"><i class="ph-bold ph-caret-left"></i></button>
