--- a/index.html
+++ b/index.html
@@ -736,12 +736,13 @@
     
     IMPORTANT: FORCE VARIETY IN GENRE. Do NOT default to Sci-Fi or Space.
     Please pick one randomly from this list: 
-    - Medieval Fantasy (Knights, Dragons, Castles)
-    - Modern Slice of Life (Beach, Supermarket, School, Office, Park)
-    - Historical (Victorian, Ancient Rome, Vikings)
+    - Medieval hurmo animation Fantasy (Knights, Dragons, Castles)
+    - Modern Slice of Life (Beach, Supermarket, school, forest, among many casual places)
+    - Vlog irl
     - Adventure (Jungle, Desert, Mountains)
-    - Horror / Mystery
-    - Comedy / Sitcom
+    - Story / Mystery
+    - Comedy / Humor
+    - Mexican or humorous scenarios or sketches 
     
     CRITICAL INSTRUCTIONS:
     1. The total spoken dialogue in the scene MUST be approximately 7 seconds long total. Split this time between the generated characters.
