--- a/Sora2Prompt.html
+++ b/Sora2Prompt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sora 2.0 Builder Pro</title>
+    <title>Sora2Prompt Pro</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -134,7 +134,7 @@
         <header class="flex flex-col md:flex-row justify-between items-end mb-8 border-b border-white/5 pb-6 animate-fade-in gap-4">
             <div>
                 <h1 class="text-3xl md:text-4xl font-bold text-white tracking-tight mb-1">Sora 2.0 <span class="text-teal-400">Builder Pro</span></h1>
-                <p class="text-gray-400 text-sm">Editor modular profesional con IA (Gemini 2.5 Flash Lite).</p>
+                <p class="text-gray-400 text-sm">Editor modular profesional con IA (Vision).</p>
             </div>
             
             <div class="flex flex-wrap items-center gap-4">
